# opengrid

./: .gitignore  Cargo.toml  README.md  pubspec.yaml
.agent/rules/: references.md
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
ao/: deploy.mjs  package-lock.json  package.json  salesman.lua  test.lua  universe.lua  world_manager.lua
ao/lib/: tsp-verify.lua
ao/universe/: grid.lua  interactions.lua  main.lua
client/lib/: main.dart
client/lib/algorithms/: tsp_solver.dart
client/lib/screens/: game_screen.dart
client/lib/state/: chunk_manager.dart
client/lib/wasm/: wasm_bridge.dart  wasm_world_controller.dart
client/lib/widgets/: city_tooltip.dart  debug_overlay.dart  grid_viewport.dart  wasm_world_view.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/screens/: game_screen.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
ref/cookbook_ao.g8way.io/: llms-full.txt  llms.txt  permaweb.txt
reference/: general_plan.md  tsp_salesmen_feasibility_assessment.md
scripts/: build.ps1  build.sh  deploy_ao.ts  deploy_arlocal.ts  test_ao.ts
server/: mod.ts
test/: widget_test.dart
wasm/: Cargo.toml
wasm/src/: lib.rs
wasm/src/renderer/: mod.rs  world_renderer.rs
wasm/src/world/: camera.rs  chunk.rs  mod.rs
wasm_assembler/: Cargo.toml
wasm_assembler/src/: lib.rs
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+2 files in other folders)
