[package]
name = "opengrid-wasm"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Performance",
    "Element",
] }

# Procedural generation - with js feature for WASM
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", features = ["small_rng"] }
rand_pcg = "0.3"

# Error handling
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
lto = true
